US-1611 fixed font weight of th elements on firefox -- was previously set to browser default for that element

--- a/cmn/MVP.css
+++ b/cmn/MVP.css
@@ -1359,6 +1359,7 @@ ul.spaced-list > li:nth-child(odd) {
     height: 60px;
 }
 .status-table > tbody > tr > th {
+    font-weight: normal;
 }
 
 .status-table > tbody > tr > th.left {
